chore(html): add opened state and dropdowns to datepickers

--- a/packages/default/scss/datetimepicker/_layout.scss
+++ b/packages/default/scss/datetimepicker/_layout.scss
@@ -41,17 +41,14 @@
         transform: translateX(-100%);
     }
 
-
-    // RTL
-    .k-datetimepicker {
+    .k-time-tab .k-datetime-selector {
+        &.k-rtl,
         &[dir="rtl"],
-        .k-rtl & {
-            .k-time-tab .k-datetime-selector {
-                transform: translateX(100%);
-            }
+        .k-rtl &,
+        [dir="rtl"] & {
+            transform: translateX(100%);
         }
     }
-
 }
 
 
